Finally got Zulu worked.

--- a/scripts/boot.sh.tmpl
+++ b/scripts/boot.sh.tmpl
@@ -84,14 +84,12 @@ __boot_handleShutdown () {
 }
 
 __boot_finalize () {
-   echo -n "${NAME}: Finalize... "
+   echo "${NAME}: Finalize... "
 
    if [ "${SAVE_STATE}" ]
    then
       backup_release
    fi
-
-   echo "DONE"
 }
 
 ###############################################################################
